# advent-of-code

2015/rust/: README.md
2015/rust/day_04/: Cargo.toml
2015/rust/day_05/: Cargo.toml
2023/rust/: README.md
2023/rust/day_05/: Cargo.toml
2023/rust/day_06/: Cargo.toml
2023/rust/day_07/: Cargo.toml
2023/rust/day_08/: Cargo.toml
2023/rust/day_09/: Cargo.toml
2023/rust/day_10/: Cargo.toml
2023/rust/day_11/: Cargo.toml
2023/rust/day_12/: Cargo.toml
2023/rust/day_13/: Cargo.toml
2023/rust/day_14/: Cargo.toml
2023/rust/day_15/: Cargo.toml
2023/rust/day_16/: Cargo.toml
2024/haskell/day_01/: day01.cabal
2024/haskell/day_01/app/: Main.hs
2024/haskell/day_02/: LICENSE  day02.cabal
2024/haskell/day_02/app/: Main.hs
2024/haskell/day_03/: day03.cabal  main.hs
2024/haskell/day_04/: main.hi  main.hs
2024/rust/day_01/: Cargo.toml
2024/rust/day_02/: Cargo.toml
2024/rust/day_03/: Cargo.toml
2024/rust/day_04/: Cargo.toml
2024/rust/day_05/: Cargo.toml
2024/rust/day_06/: Cargo.toml
2024/rust/day_07/: Cargo.toml
2024/rust/day_08/: Cargo.toml
2024/rust/day_09/: Cargo.toml
2024/rust/day_10/: Cargo.toml
2024/rust/day_11/: Cargo.toml
2024/rust/day_12/: Cargo.toml
2024/rust/day_12/src/: main.rs
2024/rust/day_13/: Cargo.toml
2024/rust/day_14/: Cargo.toml
2024/rust/day_15/: Cargo.toml
2025/day_01/: Cargo.toml
2025/day_02/: Cargo.toml
